push for hosting

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   <title>cat vs dog</title>
 </head>
 <body>
+
 <div class="container">
   <h1>Cats vs dogs</h1>
-  <h2>the final battle</h2>
+  <h2>The final battle</h2>
+  <nav><button id="reset">reset game</button></nav>
   <div class="game">
-    <div id="a1"><img id="1a" src="images/catdog.png" alt=""></div>
-    <div id="a2"><img id="2a"src="images/catdog.png" alt=""></div>
-    <div id="a3"><img id="3a"src="images/catdog.png" alt=""></div>
-    <div id="b1"><img id="1b"src="images/catdog.png" alt=""></div>
-    <div id="b2"><img id="2b"src="images/catdog.png" alt=""></div>
-    <div id="b3"><img id="3b"src="images/catdog.png" alt=""></div>
-    <div id="c1"><img id="1c"src="images/catdog.png" alt=""></div>
-    <div id="c2"><img id="2c"src="images/catdog.png" alt=""></div>
-    <div id="c3"><img id="3c"src="images/catdog.png" alt=""></div>
+    <div><img class="default" id="a1" src="images/catdog.png" alt=""></div>
+    <div><img class="default" id="a2" src="images/catdog.png" alt=""></div>
+    <div><img class="default" id="a3" src="images/catdog.png" alt=""></div>
+    <div><img class="default" id="b1" src="images/catdog.png" alt=""></div>
+    <div><img class="default" id="b2" src="images/catdog.png" alt=""></div>
+    <div><img class="default" id="b3" src="images/catdog.png" alt=""></div>
+    <div><img class="default" id="c1" src="images/catdog.png" alt=""></div>
+    <div><img class="default" id="c2" src="images/catdog.png" alt=""></div>
+    <div><img class="default" id="c3" src="images/catdog.png" alt=""></div>
   </div>
-  <button id="reset">reset game</button>
-
 </div>
 
 
