end of day push

--- a/index.html
+++ b/index.html
@@ -13,18 +13,37 @@
   <h1>Cats vs dogs</h1>
   <h2>The final battle</h2>
   <nav><button id="reset">reset game</button></nav>
-  <div class="game">
-    <div><img class="default" id="a1" src="images/catdog.png" alt=""></div>
-    <div><img class="default" id="a2" src="images/catdog.png" alt=""></div>
-    <div><img class="default" id="a3" src="images/catdog.png" alt=""></div>
-    <div><img class="default" id="b1" src="images/catdog.png" alt=""></div>
-    <div><img class="default" id="b2" src="images/catdog.png" alt=""></div>
-    <div><img class="default" id="b3" src="images/catdog.png" alt=""></div>
-    <div><img class="default" id="c1" src="images/catdog.png" alt=""></div>
-    <div><img class="default" id="c2" src="images/catdog.png" alt=""></div>
-    <div><img class="default" id="c3" src="images/catdog.png" alt=""></div>
+  <div id="gameselect">
+    <h2>chose your team</h2>
+    <button>Dogs</button>
+    <button>Cats</button>
   </div>
+
+
+  <table class="game">
+    <tr>
+      <td><img id="a1" class="default" src="images/catdog.png" alt=""/></td>
+      <td><img id="a2" class="default" src="images/catdog.png" alt=""/></td>
+      <td><img id="a3" class="default" src="images/catdog.png" alt=""/></td>
+    </tr>
+    <tr>
+      <td><img id="b1" class="default" src="images/catdog.png" alt=""/></td>
+      <td><img id="b2" class="default" src="images/catdog.png" alt=""/></td>
+      <td><img id="b3" class="default" src="images/catdog.png" alt=""/></td>
+    </tr>
+    <tr>
+      <td><img id="c1" class="default" src="images/catdog.png" alt=""/></td>
+      <td><img id="c2" class="default" src="images/catdog.png" alt=""/></td>
+      <td><img id="c3" class="default" src="images/catdog.png" alt=""/></td>
+    </tr>
+    </table>
 </div>
+
+
+
+
+
+
 
 
   <script src="js/jquery.js"></script>
@@ -32,3 +51,22 @@
     <script src="js/game.js"></script>
 </body>
 </html>
+
+
+<!-- <table>
+    <tr class="game">
+      <td img class="default" id="a1" src="images/catdog.png" alt="">1</tr>
+      <td img class="default" id="a2" src="images/catdog.png" alt="">2</tr>
+      <td img class="default" id="a3" src="images/catdog.png" alt="">3</tr>
+    </tr>
+    <tr>
+      <td img class="default" id="b1" src="images/catdog.png" alt="">4</tr>
+      <td img class="default" id="b2" src="images/catdog.png" alt="">5</tr>
+      <td img class="default" id="b3" src="images/catdog.png" alt="">6</tr>
+    </tr>
+    <td>
+      <td img class="default" id="c1" src="images/catdog.png" alt="">7</tr>
+      <td img class="default" id="c2" src="images/catdog.png" alt="">8</tr>
+      <td img class="default" id="c3" src="images/catdog.png" alt="">9</tr>
+    </tr>
+    </table> -->
