--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <title>cat vs dog</title>
 </head>
 <body>
+<div class="navContainer">
   <nav>
     <ul>
-    <li><a href="http://google.com">Connect4<a/></li>
-    <li><a href="http://google.com">Pong<a/></li>
+    <li><a href="/Users/adrianthorburn/Projects/project0.1/index.html">Connect4<a/></li>
+    <li><a href="/Users/adrianthorburn/Projects/project0.2/index.html">Pong<a/></li>
   </ul>
 </nav>
+</div>
+
 <div class="container">
-
-
   <h1>Cats vs dogs</h1>
   <h2>The final battle</h2>
   <button id="modalBtn" class="button">Choose Species</button>
@@ -78,10 +79,6 @@
     <button id="somethineElse" class="button">Play something Else?</button>
 
 </div>
-
-
-
-
 
 
 
