--- a/index.html
+++ b/index.html
@@ -8,15 +8,25 @@
   <title>cat vs dog</title>
 </head>
 <body>
+  <div class="flexContainer">
+    <div class="container1">
 <div class="navContainer">
   <nav>
+    <h3>Play Something else?</h3>
     <ul>
     <li><a href="/Users/adrianthorburn/Projects/project0.1/index.html">Connect4<a/></li>
     <li><a href="/Users/adrianthorburn/Projects/project0.2/index.html">Pong<a/></li>
   </ul>
 </nav>
+<div id="score">
+    <h3>Score</h3>
+    <h4 id="catScore">Cats:</h4>
+    <h4 id="DogScore">Dogs:</h4>
+    </div>
+</div>
 </div>
 
+<div class="container2">
 <div class="container">
   <h1>Cats vs dogs</h1>
   <h2>The final battle</h2>
@@ -75,12 +85,9 @@
     </tr>
     </table>
     <button id="reset" class="button">reset game</button>
-    <div></div>
-    <button id="somethineElse" class="button">Play something Else?</button>
-
 </div>
-
-
+</div>
+</div>
 
   <script src="js/jquery.js"></script>
   <script src="js/logic.js"></script>
