readme upadted, score system working

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="score">
     <h3>Score</h3>
     <h4 id="catScore">Cats:</h4>
-    <h4 id="DogScore">Dogs:</h4>
+    <h4 id="dogScore">Dogs:</h4>
     </div>
 </div>
 </div>
